# async-runtimes-benchmarks

./: README.md  b.jl
dotnet/: Program.cs  dotnet.csproj
elixir/: main.exs
go/: go.mod  main.go
haskell/: Main.hs  coroutines.cabal  dev.sh  run.sh  stack.yaml
java/: Threads.java  VirtualThreads.java
julia/: main_a.jl  main_a.jl.jl  main_t.jl
nodejs/: main.js
python/: main.py
